Adds translations for users

--- a/app/views/user/activate.twig
+++ b/app/views/user/activate.twig
@@ -1,26 +1,26 @@
 {% extends 'templates/default.twig'%}
 
-{% block title %}Account activeren{% endblock %}
-{% block pageTitle %}Account activeren{% endblock %}
+{% block title %}{{ translator.get('ActivateAccount') }}{% endblock %}
+{% block pageTitle %}{{ translator.get('ActivateAccount') }}{% endblock %}
 
 {% block content %}
     <form action="{{ urlFor('user.activate.post') }}?email={{ email }}&identifier={{ identifier|url_encode }}" method="post" autocomplete="off">
         <div class="form-group">
-            <label>E-mailadres</label>
+            <label>{{ translator.get('Email') }}</label>
             <p class="form-control-static">{{ email }}</p>
         </div>
         <div class="form-group">
-            <label for="password">Wachtwoord</label>
+            <label for="password">{{ translator.get('Password') }}</label>
             <input type="password" name="password" id="password" class="form-control"/>
             {% include 'errors/field.twig' with {'field': 'password'} %}
         </div>
         <div class="form-group">
-            <label for="password_confirm">Wachtwoord bevestigen</label>
+            <label for="password_confirm">{{ translator.get('ConfirmPassword') }}</label>
             <input type="password" name="password_confirm" id="password_confirm" class="form-control"/>
             {% include 'errors/field.twig' with {'field': 'password_confirm'} %}
         </div>
         <div class="form-group">
-            <input type="submit" value="Activeer" class="btn btn-primary form-control"/>
+            <input type="submit" value="{{ translator.get('Activate') }}" class="btn btn-primary form-control"/>
         </div>
 
         <input type="hidden" name="{{ csrf_key }}" value="{{ csrf_token }}"/>
