--- a/app/views/user/edit.twig
+++ b/app/views/user/edit.twig
@@ -1,7 +1,7 @@
 {% extends 'templates/default.twig' %}
 
-{% block title %}Gebruiker wijzigen{% endblock %}
-{% block pageTitle %}Gebruiker wijzigen{% endblock %}
+{% block title %}{{ translator.get('EditUser') }}{% endblock %}
+{% block pageTitle %}{{ translator.get('EditUser') }}{% endblock %}
 
 {% block content %}
     {# Back button#}
@@ -13,21 +13,21 @@
 
     <form action="{{ urlFor('user.edit.post', {userId: userId}) }}" method="post" autocomplete="off">
         <div class="form-group">
-            <label for="email">E-mailadres</label>
+            <label for="email">{{ translator.get('Email') }}</label>
             <input type="text" name="email" id="email" value="{{ request.post('email') ? request.post('email') : user.email }}" class="form-control"/>
             {% include 'errors/field.twig' with {field: 'email'} %}
         </div>
         <div class="form-group">
-            <label for="permission">Rechten</label>
+            <label for="permission">{{ translator.get('Rights') }}</label>
             <select name="permission" id="permission" class="form-control">
-                <option value="0">Maak een keuze</option>
-                <option value="1" {{ (request.post('permission') and request.post('permission') == 1) or ( user and not user.isAdmin) ? 'selected' : '' }}>Normaal</option>
-                <option value="2" {{ (request.post('permission') and request.post('permission') == 2) or ( user and user.isAdmin) ? 'selected' : '' }}>Admin</option>
+                <option value="0">{{ translator.get('Choose') }}</option>
+                <option value="1" {{ (request.post('permission') and request.post('permission') == 1) or ( user and not user.isAdmin) ? 'selected' : '' }}>{{ translator.get('Normal') }}</option>
+                <option value="2" {{ (request.post('permission') and request.post('permission') == 2) or ( user and user.isAdmin) ? 'selected' : '' }}>{{ translator.get('Admin') }}</option>
             </select>
             {% include 'errors/field.twig' with {field: 'permission'} %}
         </div>
         <div class="form-group">
-            <input type="submit" value="Wijzigen" class="btn btn-primary form-control"/>
+            <input type="submit" value="{{ translator.get('Edit') }}" class="btn btn-primary form-control"/>
         </div>
 
         <input type="hidden" name="{{ csrf_key }}" value="{{ csrf_token }}"/>
@@ -37,7 +37,7 @@
 
     <form id="form-delete" action="{{ urlFor('user.delete', {userId: userId}) }}" method="post">
         <div class="form-group">
-            <input type="submit" value="Verwijderen" class="btn btn-danger form-control"/>
+            <input type="submit" value="{{ translator.get('Delete') }}" class="btn btn-danger form-control"/>
         </div>
 
         <input type="hidden" name="{{ csrf_key }}" value="{{ csrf_token }}"/>
