--- a/app/views/auth/password/reset.twig
+++ b/app/views/auth/password/reset.twig
@@ -1,22 +1,22 @@
 {% extends 'templates/default.twig'%}
 
-{% block title %}Wachtwoord resetten{% endblock %}
-{% block pageTitle %}Wachtwoord resetten{% endblock %}
+{% block title %}{{ translator.get('ResetPassword') }}{% endblock %}
+{% block pageTitle %}{{ translator.get('ResetPassword') }}{% endblock %}
 
 {% block content %}
     <form action="{{ urlFor('auth.password.reset.post') }}?email={{ email }}&identifier={{ identifier|url_encode }}" method="post" autocomplete="off">
         <div class="form-group">
-            <label for="password">Wachtwoord</label>
+            <label for="password">{{ translator.get('Password') }}</label>
             <input type="password" name="password" id="password" class="form-control"/>
             {% include 'errors/field.twig' with {'field': 'password'} %}
         </div>
         <div class="form-group">
-            <label for="password_confirm">Wachtwoord bevestigen</label>
+            <label for="password_confirm">{{ translator.get('ConfirmPassword') }}</label>
             <input type="password" name="password_confirm" id="password_confirm" class="form-control"/>
             {% include 'errors/field.twig' with {'field': 'password_confirm'} %}
         </div>
         <div class="form-group">
-            <input type="submit" value="Wijzig wachtwoord" class="btn btn-primary form-control"/>
+            <input type="submit" value="{{ translator.get('Save') }}" class="btn btn-primary form-control"/>
         </div>
 
         <input type="hidden" name="{{ csrf_key }}" value="{{ csrf_token }}"/>
