Sets tolerence for sortable to pointer

--- a/app/views/templates/scripts/sortable.twig
+++ b/app/views/templates/scripts/sortable.twig
@@ -3,6 +3,7 @@
         $( "#sortable" ).sortable({
             helper: fixWidthHelper,
             containment: 'parent',
+            tolerance: 'pointer',
         });
         $( "#sortable" ).disableSelection();
 
