--- a/app/views/templates/default.twig
+++ b/app/views/templates/default.twig
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %} - Funnel CMS</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="{{ assetUrl }}/components/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="{{ assetUrl }}/css/stylesheet.css"/>
-    <link href='//fonts.googleapis.com/css?family=Roboto:500,400italic,100,700italic,300,700,500italic,100italic,300italic,400' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="{{ assetUrl }}/favicon.png">
 
@@ -21,9 +20,9 @@
     </div>
 
     <!-- jQuery (necessary for Bootstrap's Javascript plugins) -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="{{ assetUrl }}/components/jquery/dist/jquery.min.js"></script>
     <!-- Lastest compiled minified bootstrap Javascript -->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="{{ assetUrl }}/components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- Javascript -->
     {% block scripts %}{% endblock %}
 </body>
