--- a/app/views/article/edit.twig
+++ b/app/views/article/edit.twig
@@ -29,12 +29,12 @@
         </div>
         <div class="form-group">
             <label for="date">{{ translator.get('DatePublication') }}</label>
-            <input type="date" name="date" id="date" class="form-control" value="{{ request.post('date') ? request.post('date') : article.getPublishedAtDate }}">
+            <input type="date" name="date" id="date" class="form-control" value="{{ request.post('date') ? request.post('date') : article.getPublishedAtDate() }}">
             {% include 'errors/field.twig' with {field: 'date'} %}
         </div>
         <div class="form-group">
             <label for="time">{{ translator.get('TimePublication') }}</label>
-            <input type="time" name="time" id="time" class="form-control" value="{{ request.post('time') ? request.post('time') : article.getPublishedAtTime }}">
+            <input type="time" name="time" id="time" class="form-control" value="{{ request.post('time') ? request.post('time') : article.getPublishedAtTime() }}">
             {% include 'errors/field.twig' with {field: 'time'} %}
         </div>
         <div class="form-group">
