--- a/app/views/newsletter/all.twig
+++ b/app/views/newsletter/all.twig
@@ -40,13 +40,13 @@
                     {% for newsletter in newsletters %}
                         <tr>
                             <td>{{ newsletter.subject }}</td>
-                            <td>{{ newsletter.author.getFullNameOrEmail }}</td>
+                            <td>{{ newsletter.author.getFullNameOrEmail() }}</td>
                             <td>{{ newsletter.receivers }}</td>
 
                             {% if newsletter.published_at is null %}
                                 <td class="danger">{{ translator.get('NotSent') }}</td>
                             {% else %}
-                                <td class="success">{{ newsletter.getPublishedAt }}</td>
+                                <td class="success">{{ newsletter.getPublishedAt() }}</td>
                             {% endif %}
 
                             <td>
