--- a/app/views/templates/partials/navigation.twig
+++ b/app/views/templates/partials/navigation.twig
@@ -26,7 +26,7 @@
                         <li><a href="{{ urlFor('newsletter.all') }}">{{ translator.get('Newsletters') }}</a></li>
                         <li><a href="{{ urlFor('file.all') }}">{{ translator.get('Files') }}</a></li>
 
-                        {% if auth.isAdmin %}
+                        {% if auth.isAdmin() %}
                             <li><a href="{{ urlFor('user.all') }}">{{ translator.get('Users') }}</a></li>
                         {% endif %}
                     </ul>
@@ -36,7 +36,7 @@
                     {% if auth %}
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                {{ auth.getFullNameOrEmail }} <span class="caret"></span></a>
+                                {{ auth.getFullNameOrEmail() }} <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="{{ urlFor('account.profile') }}">{{ translator.get('ChangeInformation') }}</a></li>
                                 <li><a href="{{ urlFor('auth.password.change') }}">{{ translator.get('ChangePassword') }}</a></li>
