--- a/app/views/email/newsletter/newsletter-2016.twig
+++ b/app/views/email/newsletter/newsletter-2016.twig
@@ -18,10 +18,10 @@
                     <tr>
                         <td>
                             <!-- Header -->
-                            <table class="row" style="background-color: #ef3434">
+                            <table class="row" style="background-color: #009d7e">
                                 <tr>
                                     <th class="small-12 large-12 first columns" style="padding-top: 25px; padding-bottom: 25px;">
-                                        <h1 class="text-center" style="margin-bottom: 0; color: #ffffff;">Flee Shuttle Nieuwsbrief</h1>
+                                        <h1 class="text-center" style="margin-bottom: 0; color: #ffffff;">Template Newsletter</h1>
                                     </th>
                                 </tr>
                             </table>
@@ -38,6 +38,7 @@
                             <!-- End Content -->
 
                             <!-- Sponsors -->
+                            <!--
                             <table class="row">
                                 <tr>
                                     <th class="small-12 large-6 first columns" valign="middle">
@@ -56,6 +57,7 @@
                                     </th>
                                 </tr>
                             </table>
+                            -->
                             <!-- End Sponsors -->
 
                             <!-- Footer -->
